--- a/tekton/setup/tasks/execute-maven-task.yaml
+++ b/tekton/setup/tasks/execute-maven-task.yaml
@@ -5,6 +5,8 @@ metadata:
 spec:
   description: This Task can be used to run a Maven build.
   params:
+  # working image gcr.io/cloud-builders/mvn@sha256:642febb52d80a95de983dd7e2ff584a3e365e1d2a7fad795816b3acc204d641c
+  # failing Red Hat image registry.redhat.io/ubi8/openjdk-17@sha256:0d12c4097e098b62f78a7a31c0d711d78e1e5a53f4c007b9a5fc6cc6ab4dc018
     - default: >-
         registry.redhat.io/ubi8/openjdk-17@sha256:0d12c4097e098b62f78a7a31c0d711d78e1e5a53f4c007b9a5fc6cc6ab4dc018
       description: Maven base image
@@ -51,7 +53,7 @@ spec:
       description: Protocol for the proxy ie http or https
       name: PROXY_PROTOCOL
       type: string
-    - default: ./quarkus
+    - default: .
       description: >-
         The context directory within the repository for sources on which we want
         to execute maven goals.
@@ -191,9 +193,9 @@ spec:
     - emptyDir: {}
       name: dind-certs
   workspaces:
-    - description: The workspace consisting of maven project.
-      name: source
-    - description: >-
+    - name: source
+      description: The workspace consisting of maven project.
+    - name: maven-settings
+      description: >-
         The workspace consisting of the custom maven settings provided by the
         user.
-      name: maven-settings
