fixes plus tekton upgrades

--- a/tekton/setup/pipeline/test-and-build-pipeline.yaml
+++ b/tekton/setup/pipeline/test-and-build-pipeline.yaml
@@ -1,4 +1,4 @@
-apiVersion: tekton.dev/v1beta1
+apiVersion: tekton.dev/v1
 kind: Pipeline
 metadata:
   labels:
@@ -45,6 +45,7 @@ spec:
     params:
       - name: GOALS
         value: 
+          - clean
           - verify
       - name: CONTEXT_DIR
         value: "$(params.app-dir)"
