--- a/tekton/setup/tasks/execute-maven-task.yaml
+++ b/tekton/setup/tasks/execute-maven-task.yaml
@@ -1,4 +1,4 @@
-apiVersion: tekton.dev/v1beta1
+apiVersion: tekton.dev/v1
 kind: Task
 metadata:
   name: execute-maven-task
@@ -75,7 +75,7 @@ spec:
             - ls
             - /certs/client/ca.pem
         periodSeconds: 1
-      resources:
+      computeResources:
         requests:
           memory: 512Mi
       securityContext:
@@ -90,7 +90,7 @@ spec:
   steps:
     - image: 'registry.access.redhat.com/ubi8/ubi-minimal:8.2'
       name: mvn-settings
-      resources: {}
+      computeResources: {}
       script: >
         #!/usr/bin/env bash
 
@@ -168,6 +168,9 @@ spec:
 
       securityContext:
         privileged: false
+        # From my test environment, this container was able to find the `settings.xml` file without issue,
+        # so there was no need to apply this modification:
+        # runAsUser: 1001
     - args:
         - '-s'
         - $(workspaces.maven-settings.path)/settings.xml
@@ -176,9 +179,11 @@ spec:
           - /usr/bin/mvn
       image: $(params.MAVEN_IMAGE)
       name: mvn-goals
-      resources: {}
+      computeResources: {}
       securityContext:
         privileged: false
+        # This was the only truly required change I found to have my test environment's pipeline to run correctly
+        runAsUser: 1001
       volumeMounts:
         - mountPath: /certs/client
           name: dind-certs
