--- a/tekton/setup/tasks/get-source-with-git-task.yaml
+++ b/tekton/setup/tasks/get-source-with-git-task.yaml
@@ -1,10 +1,9 @@
-apiVersion: tekton.dev/v1beta1
+apiVersion: tekton.dev/v1
 kind: Task
 metadata:
   name: get-source-with-git
 spec:
   stepTemplate:
-    name: "tekton-home-dir"
     env:
       - name: "HOME"
         value: "/tekton/home"
