--- a/tekton/execution/test-and-build-pr.yaml
+++ b/tekton/execution/test-and-build-pr.yaml
@@ -1,11 +1,12 @@
-apiVersion: tekton.dev/v1beta1
+apiVersion: tekton.dev/v1
 kind: PipelineRun
 metadata:
   generateName: test-and-build-reproducer-plr-
 spec:
+  taskRunTemplate:
+    serviceAccountName: case03752258-pipeline-sa
   pipelineRef:
     name: test-and-build-reproducer
-  serviceAccountName: case03752258-pipeline-sa
   params:
     - name: image-tag
       value: 4b33546b204c3882807d9ec636a363adc1223797
