--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@
 /inspect.local.5057020842918764339
 /must-gather.local.1044217869544754273
 /must-gather.local.1121668815353214025
+/must-gather.local.3409190404749038119
 *.tar
