--- a/tekton/execution/test-and-build-pr.yaml
+++ b/tekton/execution/test-and-build-pr.yaml
@@ -5,6 +5,9 @@ metadata:
 spec:
   taskRunTemplate:
     serviceAccountName: case03752258-pipeline-sa
+    podTemplate:
+      nodeSelector:
+        kubernetes.io/hostname: ip-10-0-182-200.ec2.internal
   pipelineRef:
     name: test-and-build-reproducer
   params:
@@ -22,3 +25,6 @@ spec:
     - name: maven-settings
       configMap:
         name: maven-settings
+    - name: maven-local-repo
+      persistentvolumeclaim:
+        claimName: maven-local-repo-pvc
