--- a/tekton/setup/tasks/execute-maven-task.yaml
+++ b/tekton/setup/tasks/execute-maven-task.yaml
@@ -5,63 +5,58 @@ metadata:
 spec:
   description: This Task can be used to run a Maven build.
   params:
-  # failing gcr image gcr.io/cloud-builders/mvn@sha256:642febb52d80a95de983dd7e2ff584a3e365e1d2a7fad795816b3acc204d641c
-  # updated gcr 2024-06-03 gcr.io/cloud-builders/mvn@sha256:15713b058037904eced9bc143dd145267d9bff5c1583aca685fcdb764fba5fb0
-  # failing Red Hat image registry.redhat.io/ubi8/openjdk-17@sha256:0d12c4097e098b62f78a7a31c0d711d78e1e5a53f4c007b9a5fc6cc6ab4dc018
-  # updated ubi8 RH image registry.access.redhat.com/ubi8/openjdk-17@sha256:e8cc2e476282b75d89c73057bfa713db22d72bdb2808d62d981a84c33beb2575
-  # updated ubi9 RH image registry.access.redhat.com/ubi9/openjdk-17@sha256:144419dd1caf7c4455418d2dbf99c1c02a07e9c207e9c66e0224b852633ea2fe
-    - default: >-
-        registry.access.redhat.com/ubi8/openjdk-21@sha256:106e8c9c801391613b8b55b7b563a3c70c9c593c458ff2486954808d03017acf
+    - name: MAVEN_IMAGE
+      type: string
       description: Maven base image
-      name: MAVEN_IMAGE
-      type: string
-    - default:
-      - package
-      description: maven goals to run
-      name: GOALS
+      default: >-
+        registry.access.redhat.com/ubi8/openjdk-21@sha256:7c18f5fdd2160806fb205d343f73b9920a48d2a87da5cbb70344410e81a87151
+    - name: GOALS
       type: array
-    - default: ''
+      description: maven goals to run
+      default:
+      - package
+    - name: MAVEN_MIRROR_URL
+      type: string
       description: The Maven repository mirror url
-      name: MAVEN_MIRROR_URL
+      default: ''
+    - name: SERVER_USER
       type: string
-    - default: ''
       description: The username for the server
-      name: SERVER_USER
+      default: ''
+    - name: SERVER_PASSWORD
       type: string
-    - default: ''
       description: The password for the server
-      name: SERVER_PASSWORD
+      default: ''
+    - name: PROXY_USER
       type: string
-    - default: ''
       description: The username for the proxy server
-      name: PROXY_USER
+      default: ''
+    - name: PROXY_PASSWORD
       type: string
-    - default: ''
       description: The password for the proxy server
-      name: PROXY_PASSWORD
+      default: ''
+    - name: PROXY_PORT
       type: string
-    - default: ''
       description: Port number for the proxy server
-      name: PROXY_PORT
+      default: ''
+    - name: PROXY_HOST
       type: string
-    - default: ''
       description: Proxy server Host
-      name: PROXY_HOST
+      default: ''
+    - name: PROXY_NON_PROXY_HOSTS
       type: string
-    - default: ''
       description: Non proxy server host
-      name: PROXY_NON_PROXY_HOSTS
+      default: ''
+    - name: PROXY_PROTOCOL
       type: string
-    - default: http
       description: Protocol for the proxy ie http or https
-      name: PROXY_PROTOCOL
+      default: http
+    - name: CONTEXT_DIR
       type: string
-    - default: .
       description: >-
         The context directory within the repository for sources on which we want
         to execute maven goals.
-      name: CONTEXT_DIR
-      type: string
+      default: .
   sidecars:
     - args:
         - '--storage-driver=vfs'
@@ -90,8 +85,12 @@ spec:
           name: dind-socket
         - mountPath: /var/lib/docker
           name: dind-storage
+  # stepTemplate:
+  #   env:
+  #     - name: "HOME"
+  #       value: "/tekton/home"
   steps:
-    -  name: mvn-settings
+    - name: mvn-settings
       image: 'registry.redhat.io/ubi8/ubi-minimal@sha256:6825946f10e8c81586fa7815c4f06016af05cfc231d921ec9699402a6655d201'
       computeResources: {}
       script: >
@@ -171,28 +170,27 @@ spec:
 
       securityContext:
         privileged: false
-        # From my test environment, this container was able to find the `settings.xml` file without issue,
-        # so there was no need to apply this modification:
-        # runAsUser: 1001
+
     - name: maven-goals
+      image: $(params.MAVEN_IMAGE)
+      workingDir: $(workspaces.source.path)/$(params.CONTEXT_DIR)
+      command: ["/usr/bin/mvn"]
       args:
         - '-s'
         - $(workspaces.maven-settings.path)/settings.xml
         - $(params.GOALS)
-      command:
-          - /usr/bin/mvn
-      image: $(params.MAVEN_IMAGE)
+        - '-Dmaven.repo.local=$(workspaces.maven-local-repo.path)'
+      # command:
+      #     - /usr/bin/mvn
       computeResources: {}
       securityContext:
-        # privileged: false
-        # This was the only truly required change I found to have my test environment's pipeline to run correctly
-        runAsUser: 1001
+        runAsNonRoot: true
+        runAsUser: 185
       volumeMounts:
         - mountPath: /certs/client
           name: dind-certs
         - mountPath: /var/run/
           name: dind-socket
-      workingDir: $(workspaces.source.path)/$(params.CONTEXT_DIR)
   volumes:
     - emptyDir: {}
       name: dind-storage
@@ -207,3 +205,6 @@ spec:
       description: >-
         The workspace consisting of the custom maven settings provided by the
         user.
+    - name: maven-local-repo
+      description: Local maven (m2) repo
+      optional: true
