--- a/quarkus/src/main/resources/application.properties
+++ b/quarkus/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 quarkus.datasource.db-kind=postgresql
 quarkus.hibernate-orm.jdbc.timezone=UTC
 quarkus.http.ssl.protocols=TLSv1.2
-quarkus.datasource.devservices.enabled=false
+# quarkus.datasource.devservices.enabled=false
 
 # ===================== Local Deployment ==========================================================
 #  --  DATASOURCE
